// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`side-nav/CollapseButton snapshot tests renders minimized 1`] = `
.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  height: 100%;
  padding: 6px 10px;
  cursor: pointer;
}

<div
  aria-pressed={false}
  className="emotion-1"
  role="button"
  tabIndex={0}
>
  <svg
    className="emotion-0"
    height="10px"
    width="10px"
  >
    <path
      d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
    />
  </svg>
</div>
`;

exports[`side-nav/CollapseButton snapshot tests renders with event handlers 1`] = `
.emotion-1 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  height: 100%;
  padding: 6px 10px;
  cursor: pointer;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  aria-pressed={true}
  className="emotion-1"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  <svg
    className="emotion-0"
    height="10px"
    width="10px"
  >
    <path
      d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
    />
  </svg>
</div>
`;

exports[`side-nav/CollapseButton snapshot tests renders with no props 1`] = `
.emotion-1 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  height: 100%;
  padding: 6px 10px;
  cursor: pointer;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  aria-pressed={true}
  className="emotion-1"
  role="button"
  tabIndex={0}
>
  <svg
    className="emotion-0"
    height="10px"
    width="10px"
  >
    <path
      d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
    />
  </svg>
</div>
`;
